# hourly_amazon_stock_prediction

./: .gitignore  README.md  app.py  dummy_file.txt  index.html  pyproject.toml
.github/workflows/: deploy.yml  feature_and_inference_pipeline.yml  feature_and_inference_pipelines.yml  feature_pipeline.yml  reboot_streamlit.yml  train_pipeline.yml
amazonStockPrediction/src/: backfill_features.py  feature_pipeline.py  utils.py
amazonstockprediction/: backfill_features.py  batch_inference_pipeline.py  feature_pipeline.py  logger.py  training_pipeline.py  utils.py
amazonstockprediction/src/: backfill_features.py
config/: config.yml
dashboard/: app.py  prod_requirements.txt  requirements.txt
notebooks/: backfill_features.ipynb  batch_inference_pipeline.ipynb  data.csv  feature_pipeline.ipynb  stock_feature_pipeline.ipynb  training_pipeline.ipynb
preprocessor/: hyper_params.json
src/: backfill_features.py  stock_eda.py
src/utils/: data_processing.py
tests/: test_utils.py
